@@ -179,16 +179,17 @@ errorCore (ErrorTag e, const char *format, va_list ap)
 	    /* When lineNum is zero, we're processing the -PD options.  */
 	    if (pObjP->lineNum != 0)
 	      fprintf (stderr, "%s:%d:%zd: %s: %s\n",
-		       pObjP->name ? pObjP->name : "{standard input}",
+		       pObjP->name,
 	               pObjP->lineNum,
 		       Input_GetColumn (),
 		       str, errbuf);
 	    else
 	      fprintf (stderr, "%s: %s\n", str, errbuf);
 	    break;
+
 	  case POType_eMacro:
 	    fprintf (stderr, "%s:%d:%zd: %s: %s in macro %s\n",
-		     pObjP->name ? pObjP->name : "{standard input}",
+		     pObjP->name,
 	             pObjP->lineNum,
 		     Input_GetColumn (),
 		     str, errbuf,
