@@ -1,3 +1,8 @@
+Sun Sep 11 14:06:06 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>
+
+	* error.c (errorCore): PObject::name can't be NULL anymore.
+	* filestack.c (ReportFSStack, FS_GetCurFileName): Likewise.
+
 Sun Sep 11 14:01:08 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>
 
 	* error.c (no_errors, no_warnings, ThrowbackStarted): Rename to
